--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ header .text .desc{
 /*--- movies ---*/
 .movies{
     background: #000;
-    padding: 40px;
+    padding: 40px 15px;
     color: #d1d1d1;
 }
 .movies  .list-head{
@@ -94,8 +94,8 @@ header .text .desc{
     gap:20px
 }
 .movie{
-    min-height: 350px;
-    width: 300px;
+    min-height: 300px;
+    width: 280px;
     border: 1px solid #eee;
     border-radius: 10px;
     display: flex;
@@ -123,7 +123,7 @@ header .text .desc{
 .movie .info{
     position: absolute;
     width: 100%;
-    height: 50%;
+    min-height: 60%;
     top: 0;
     left: 100%;
     background: rgba(0,0,0,0.9);
@@ -136,9 +136,11 @@ header .text .desc{
     transition: all 0.3s;
     z-index: 50;
     padding: 20px;
+    font-size: 14px;
 }
 .movie .info h3{
     margin-bottom: 10px;
+    font-size: 18px;
 }
 .movie:hover .info{
     left: 0;
@@ -191,6 +193,10 @@ footer .cols .col2{
 }
 footer img{
     width: 160px;
+    margin: auto;
+}
+footer p{
+    margin-bottom: 15px;
 }
 /* footer a{
     display: block;
@@ -305,7 +311,7 @@ footer .last{
     padding: 5px;
 }
 .form form{
-    text-align: center;
+    text-align: left;
     font-size: 18px;
 }
 .form form> div{
@@ -333,11 +339,11 @@ footer .last{
     z-index: 100;
     font-size: 28px;
     transition: all 0.4s;
-    transform:translateX(-50%) scale(0);
+    transform:translateX(-50%);
+    display:none;
+
 }
-.message.show{
-    transform:translateX(-50%) scale(1);
-}
+
 .error{
     position: fixed;
     top: 150px;
@@ -351,11 +357,10 @@ footer .last{
     z-index: 100;
     font-size: 28px;
     transition: all 0.4s;
-    transform:translateX(-50%) scale(0);
+    transform:translateX(-50%);
+    display:none;
 }
-.error.show{
-    transform: translateX(-50%) scale(1);
-}
+
 body.fixed{
     overflow: hidden;
 }
@@ -387,3 +392,69 @@ button{
     padding:0.5rem 1rem;
     
 }
+@media(min-width:1171px){
+    footer .col,.col2{
+        text-align: center;
+    }
+    footer img{
+        width: 180px;
+        margin: auto;
+    }
+}
+@media(max-width:1170px){
+    .movie{
+        width: 250px;
+        min-height: 280px;
+    }
+}
+
+@media(max-width:991px){
+    .movie .info p{
+        font-size: 14px;
+    }
+    footer p{
+        margin-bottom: 10px;
+    }
+}
+/*tablet*/
+@media(max-width:767px){
+    .movie{
+        width: 250px;
+        min-height: 280px;
+    }
+    .top-nav .logo img{
+        width: 160px;
+    }
+    header .text h1{
+        font-size: 45px;
+    }
+    
+}
+/* mobile */
+@media(max-width:500px){
+    header .text h1{
+        font-size: 40px;
+    }
+}
+.rate{
+    padding: 8px;
+    text-align: center;
+    background: #222;
+}
+
+
+select {
+    width: 50%;
+    padding: 6px 6px;
+    border-radius: 4px;
+    
+ }
+ .prices {
+    width: 80%;
+    padding: 6px 6px;
+    border-radius: 4px;
+    
+ }
+ form input,form select{
+     width:200px;
+ }
